project/logs/20250523_132108.log
WSTRINGHello,DirectX!

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

Use FeatureLevel : 12_2

Complete create D3D12Device!!!

Bigin CompileShader, path:Object3D.vs.hlsl,profiale:vs_6_0

Object3D.vs.hlsl:17:20: error: cannot convert from 'float32_t2' to 'float32_t4'
    output.texcoord= input.texcoord;
                   ^

